# pingol-final-task

./: README.md  README.rst
data-ingestion/: .gitignore  .pylintrc  README.rst  main.py  pyproject.toml  settings.toml
data-ingestion/data/: usuarios.csv
data-ingestion/data_ingestion/: upload_data.py
data-ingestion/tests/: test_data_ingestion.py
data-processing/: .gitignore  .pylintrc  main.py  pyproject.toml
data-processing/tests/: test_data_processing.py
data_ingestion/data/: MODELAGEM_DOMINIO_TRABALHO_FINAL.gnumeric
infra/: datalake_gen2.tf  resource_group.tf  storage_account.tf  storage_container.tf  synapse_analytics.tf  variables.tf
