[tool.poetry]
name = "data-processing"
version = "0.1.0"
description = ""
authors = ["Fillipe Goulart <fillipe.mendes@loggi.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
ipdb = "^0.13.9"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
